force-app/main/default/objects/Resposta__c/Resposta__c.object-meta.xml
<CustomObject>
    <description>Objeto de criação de respostas do Objeto Pergunta.</description>
    <label>Resposta</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Nº da Resposta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>