force-app/main/default/objects/Resposta__c/fields/Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Auditoria__c</fullName>
    <description>Auditoria pai</description>
    <label>Auditoria</label>
    <referenceTo>Auditoria__c</referenceTo>
    <relationshipLabel>Respostas</relationshipLabel>
    <relationshipName>Respostas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>