force-app/main/default/objects/Resposta__c/fields/Pergunta__c.field-meta.xml
<CustomField>
    <fullName>Pergunta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pergunta</label>
    <referenceTo>Pergunta_de_Auditoria__c</referenceTo>
    <relationshipLabel>Respostas</relationshipLabel>
    <relationshipName>Respostas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>