force-app/main/default/objects/Resposta__c/fields/Pergunta_formula__c.field-meta.xml
<CustomField>
    <fullName>Pergunta_formula__c</fullName>
    <label>Pergunta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>