force-app/main/default/objects/Resposta__c/fields/Resposta__c.field-meta.xml
<CustomField>
    <fullName>Resposta__c</fullName>
    <label>Resposta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>