force-app/main/default/objects/Resposta__c/fields/Secao__c.field-meta.xml
<CustomField>
    <fullName>Secao__c</fullName>
    <formula>Pergunta__r.Nome_da_Secao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seção</label>
    <type>Text</type>
</CustomField>