force-app/main/default/objects/Resposta__c/fields/Tipo_da_Pergunta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Pergunta__c</fullName>
    <inlineHelpText>Salvo automaticamente.</inlineHelpText>
    <label>Tipo da Pergunta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Pergunta_de_Auditoria</valueSetName>
    </valueSet>
</CustomField>