force-app/main/default/objects/Resposta__c/validationRules/Bloqueia_criacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_criacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
 ISPICKVAL(Auditoria__r.Status__c, &quot;CONCLUIDO&quot;)
)</errorConditionFormula>
    <errorMessage>Auditoria concluída. Não é possível inserir mais respostas.</errorMessage>
</ValidationRule>