force-app/main/default/objects/Resposta__c/validationRules/Tipo_da_Pergunta.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_da_Pergunta</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Tipo_da_Pergunta__c) != TEXT(Pergunta__r.Tipo__c)</errorConditionFormula>
    <errorDisplayField>Tipo_da_Pergunta__c</errorDisplayField>
    <errorMessage>O tipo da resposta precisa ser o mesmo que da pergunta.</errorMessage>
</ValidationRule>